adicionando categoria